--- a/index.html
+++ b/index.html
@@ -1,67 +1,27 @@
 <!DOCTYPE html>
 <html ng-app="redlineApp">
-  <head>
-    <title>Angularjs Table App</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
-    <![endif]-->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
-    <script src="scripts/angular-route.min.js"></script>
-  </head>
-  <body>
-  <div class="container" ng-controller="redlinesController">
-    <h1>Angularjs Table</h1>
-    <div class="table-responsive">
-                    	<ul class="pagination pagination-sm">
-                    		<li class="disabled"><a href="#">&laquo;</a></li>
-                    		<li class="active"><a href="#">1</a></li>
-                    		<li><a href="#">2</a></li>
-                    		<li><a href="#">3</a></li>
-                    		<li><a href="#">&raquo;</a></li>
-                    	</ul>
-                        <table class="table table-striped table-hover table-condensed table-bordered">
-                            <thead>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>User</th>
-                                    <th>Plan</th>
-                                </tr>
-                                <tr>
-                                	<td>
-                                    	<input ng-model="id" class="form-control input-sm" type="search">
-                                    </td>
-                                    <td>
-                                    	<input class="form-control input-sm" type="search">
-                                    </td>
-                                    <td>
-                                    	<input class="form-control input-sm" type="search">
-                                    </td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            	<tr ng-repeat="redline in redlines | filter:id | orderBy:'user'">
-                                	<td>{{redline.id}}</td>
-                                    <td>{{redline.user}}</td>
-                                    <td>{{redline.plan}}</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <ul class="pagination pagination-sm">
-                    		<li class="disabled"><a href="#">&laquo;</a></li>
-                    		<li class="active"><a href="#">1</a></li>
-                    		<li><a href="#">2</a></li>
-                    		<li><a href="#">3</a></li>
-                    		<li><a href="#">&raquo;</a></li>
-                    	</ul>
-                    </div>
-                    </div>
-
+    <head>
+    	<title>Redlines</title>
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<!-- Bootstrap -->
+    	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    
+    	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    	<!--[if lt IE 9]>
+      		<script src="../../assets/js/html5shiv.js"></script>
+      		<script src="../../assets/js/respond.min.js"></script>
+    	<![endif]-->
+    	<script src="http://code.angularjs.org/1.2.0-rc.3/angular.min.js"></script>
+    	<script src="http://code.angularjs.org/1.2.0-rc.3/angular-route.min.js"></script>
+    </head>
+<body>
+	<!-- views placeholder -->
+    <div data-ng-view>
+    </div>
+    <a href="/AngularJSTable/#create">Create new redline</a>
+    <a href="/AngularJSTable/#">In Progress</a>
+    <!-- /views -->
+    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -74,24 +34,27 @@
 				.when('/',
 					{
 						controller: 'redlinesController',
-						templateUrl: 'index.html'
+						templateUrl: 'partials/inProgress.html'
 					})
-				.when('/pending',
+				.when('/create',
 					{
 						controller: 'redlinesController',
-						templateUrl: 'pending.html'
+						templateUrl: 'partials/create.html'
 					})
 				.otherwise({ redirectTo: '/'});
-		});
+			});
 		
-		redlineApp.controller('redlinesController', function($scope) {
+		var controllers = {};
+		controllers.redlinesController = function ($scope) {
 			$scope.redlines = [
 				{id:1,user:'Mark',plan:'1-20'}, 
 				{id:2,user:'Tony',plan:'2-40'}, 
 				{id:3,user:'Jen',plan:'9-30'}
 			];
-		});
-	</script>
-  </body>
+		};
+		
+		redlineApp.controller(controllers);
+    </script>
+</body>
 </html>
 
